The submodule is included and it works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,19 +7,28 @@ enable_language(CXX) 				#set the language as c++
 set(CMAKE_CXX_STANDARD 11)			#project standard
 # set(CMAKE_CXX_FLAGS "-O3")		#enable optimization lvl3 (windows does not know it)
 
-# Requirements
-# find_package(OpenCV REQUIRED)
-# target_link_libraries( CMake_template ${OpenCV_LIBS} )
-
-# Add Submodule -> check out: https://git-scm.com/book/en/v2/Git-Tools-Submodules
-# include(externalLibs/CMakeLists.txt)
-# add_subdirectory(externalLibs/c_printer)
-
 
 # Create alias
-include_directories(src/include)            #include the .hh folder, then each .cc will load its .hh
-file(GLOB source_files "src/*.cc")       	#include all the .cc files as source
-file(GLOB exec_file "exec/ciao_mondo.cc")  	#include the main
+include_directories(${PROJECT_SOURCE_DIR}/src/include)            #include the .hh folder, then each .cc will load its .hh
+include_directories(${PROJECT_SOURCE_DIR}/externalLibs/c_printer/src)
+file(GLOB source_files "${PROJECT_SOURCE_DIR}/src/*.cc")       	#include all the .cc files as source
+file(GLOB exec_file "${PROJECT_SOURCE_DIR}/exec/ciao_mondo.cc")  	#include the main
+
+
+# Requirements
+# find_package(OpenCV REQUIRED)
+# if(OpenCV)
+# 	target_link_libraries( CMake_template ${OpenCV_LIBS} )
+# else()
+# 	#somthing else
+# endif()
+
+# Add Submodule 
+# -> check out: https://git-scm.com/book/en/v2/Git-Tools-Submodules
+# -> https://foonathan.net/2016/07/cmake-dependency-handling/
+add_subdirectory(${PROJECT_SOURCE_DIR}/externalLibs/c_printer/)
+# set(BlSt  BibliotecaStampante)
+# add_library(${BlSt} STATIC ${source_files})
 
 
 # Create the Static library
@@ -29,7 +38,7 @@ add_library(${LIB} STATIC ${source_files})	#add all the .cc to static library pr
 # Create the executable
 set(EXEC executable)						#set the name of the executable
 add_executable(${EXEC} ${exec_file})		#declare the executable with its file
-target_link_libraries(${EXEC} ${LIB})		#add the library to the created executable	
+target_link_libraries(${EXEC} ${LIB} CPrinter)		#add the library to the created executable	
 
 
 
