--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 # Configuration
-project(CMake_template VERSION 1.1)	#set project name (is it useless???)
+project(CMake_template VERSION 1.2)	#set project name (useful for knowledge)
 enable_language(CXX) 				#set the language as c++
 set(CMAKE_CXX_STANDARD 11)			#project standard
 if (UNIX)
@@ -16,13 +16,12 @@ endif (WIN32)
 # Create alias
 include_directories(${PROJECT_SOURCE_DIR}/src/include)            	#include the .hh folder, then each .cc will load its .hh
 file(GLOB source_files "${PROJECT_SOURCE_DIR}/src/*.cc")       		#include all the .cc files as source
-file(GLOB exec_file "${PROJECT_SOURCE_DIR}/exec/ciao_mondo.cc")  	#include the main
+file(GLOB exec_main "${PROJECT_SOURCE_DIR}/exec/ciao_mondo.cc")  	#include the main
+file(GLOB exec_CV   "${PROJECT_SOURCE_DIR}/exec/imgDisplay.cc")
 
 
 # Requirements
-# find_package(OpenCV REQUIRED)
-# target_link_libraries( CMake_template ${OpenCV_LIBS} )
-
+find_package(OpenCV REQUIRED)	#importing of openCV (it need to be installed on the machine)
 
 # Add Submodule 
 # -> check out: https://git-scm.com/book/en/v2/Git-Tools-Submodules
@@ -35,9 +34,13 @@ set(LIB  Biblioteca)						#set the name of the static library (.a) as projectLib
 add_library(${LIB} STATIC ${source_files})	#add all the .cc to static library previously defined
 
 
-# Create the executable
-set(EXEC executable)							#set the name of the executable
-add_executable(${EXEC} ${exec_file})			#declare the executable with its file
-target_link_libraries(${EXEC} ${LIB} CPrinter)	#add the library to the created executable	
+# Create the executables
+set(EXEC main_executable)						#set the name of the executable
+add_executable(${EXEC} ${exec_main})			#declare the executable with its file
+target_link_libraries(${EXEC} ${LIB} ${CPrinter_LIBS})	#add the library to the created executable	
+
+set(EXEC_CV cv_executable)	
+add_executable(${EXEC_CV} ${exec_CV} )
+target_link_libraries( ${EXEC_CV} ${OpenCV_LIBS} )
 
 
