Add scenario with openCV on external .hh and .cc files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,15 +13,15 @@ if (WIN32)
 endif (WIN32)
 
 
+
 # Create alias
 include_directories(${PROJECT_SOURCE_DIR}/src/include)            	#include the .hh folder, then each .cc will load its .hh
 file(GLOB source_files "${PROJECT_SOURCE_DIR}/src/*.cc")       		#include all the .cc files as source
-file(GLOB exec_main "${PROJECT_SOURCE_DIR}/exec/ciao_mondo.cc")  	#include the main
-file(GLOB exec_CV   "${PROJECT_SOURCE_DIR}/exec/imgDisplay.cc")
 
 
 # Requirements
 find_package(OpenCV REQUIRED)	#importing of openCV (it need to be installed on the machine)
+
 
 # Add Submodule 
 # -> check out: https://git-scm.com/book/en/v2/Git-Tools-Submodules
@@ -30,17 +30,25 @@ add_subdirectory(${PROJECT_SOURCE_DIR}/externalLibs/c_printer/)
 
 
 # Create the Static library
-set(LIB  Biblioteca)						#set the name of the static library (.a) as projectLib.a into the build directory
+set(LIB Biblioteca)							#set the name of the static library (.a) as projectLib.a into the build directory
+include_directories(${OpenCV_INCLUDE_DIRS})
 add_library(${LIB} STATIC ${source_files})	#add all the .cc to static library previously defined
+target_link_libraries(${LIB} ${OpenCV_LIBS})	
 
 
 # Create the executables
-set(EXEC main_executable)						#set the name of the executable
-add_executable(${EXEC} ${exec_main})			#declare the executable with its file
-target_link_libraries(${EXEC} ${LIB} ${CPrinter_LIBS})	#add the library to the created executable	
+file(GLOB main_helloWorld "${PROJECT_SOURCE_DIR}/exec/helloWorld.cc")  	#include the main
+set(exec_helloWorld helloWorld)						#set the name of the executable
+add_executable(${exec_helloWorld} ${main_helloWorld})			#declare the executable with its file
+target_link_libraries(${exec_helloWorld} ${LIB} ${CPrinter_LIBS})	#add the library to the created executable	
 
-set(EXEC_CV cv_executable)	
-add_executable(${EXEC_CV} ${exec_CV} )
-target_link_libraries( ${EXEC_CV} ${OpenCV_LIBS} )
+file(GLOB main_imgDisplay   "${PROJECT_SOURCE_DIR}/exec/imgDisplay.cc")
+set(exec_imgDisplay imgDisplay)	
+add_executable(${exec_imgDisplay} ${main_imgDisplay} )
+target_link_libraries( ${exec_imgDisplay} ${OpenCV_LIBS} )
 
+file(GLOB main_imgDisplayV2   "${PROJECT_SOURCE_DIR}/exec/openCVexec.cc")
+set(exec_imgDisplayV2 imgDisplayV2)	
+add_executable(${exec_imgDisplayV2} ${main_imgDisplayV2} )
+target_link_libraries( ${exec_imgDisplayV2} ${LIB} ${OpenCV_LIBS})
 
